--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
   </head>
   <body>
     <header>
+    <h1><bold><big>Sectioning content</big></bold></h1>
     </header>
     <main>
+    <h2><bold>Global navigation</bold></h2>
+      <ul>
+        <li>article</li>
+        <li>aside</li>
+        <li>nav</li>
+        <li>section</li>
+      </ul>
+    <h2><bold>Articles</bold></h2>
+    <p>The HTML Article Element (&lt;article&gt;)represents a self-composition in a document, page, application, or site, which is intended to be independently distributable or reusable (e.g., in syndication). This could be a forum post, a magazine or newspaper article, a blog entry, an object, or any other independent item of content. Each &lt;article&gt; should be identified, typically by including a heading (h1-h6) as a child of the &lt;article&gt; element.
+
+    Content categories: Flow content, sectioning content, palpable content.</p>
+    <h2><bold>Asides</bold></h2>
+    <p>The HTML &lt;aside&gt; element represents a section of the page with content connected tangentially to the rest which could be considered separate from the content. These sections are often represented as sidebars or inserts. They often contain the definitions on the sidebars, such as definitions frmo the glossary; there may also be other types of information, such as related advertsements; the biography of the author; web applications; profile information or related links on the blog.</p>
     </main>
     <footer>
+    <p>&copy; copyright 2015 Sections, Inc.</p>
     </footer>
   </body>
-</html>S
+</html>
