--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <main>
     <h2><bold>Global navigation</bold></h2>
       <ul>
-        <li>article</li>
-        <li>aside</li>
-        <li>nav</li>
-        <li>section</li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article">article</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/aside">aside</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/nav">nav</a></li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/section">section</a></li>
       </ul>
     <h2><bold>Articles</bold></h2>
     <p>The HTML Article Element (&lt;article&gt;)represents a self-composition in a document, page, application, or site, which is intended to be independently distributable or reusable (e.g., in syndication). This could be a forum post, a magazine or newspaper article, a blog entry, an object, or any other independent item of content. Each &lt;article&gt; should be identified, typically by including a heading (h1-h6) as a child of the &lt;article&gt; element.
